--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,24 @@
-cmake_minimum_required(VERSION 3.20)
-project(VoltScript VERSION 0.6.0 LANGUAGES CXX)
+cmake_minimum_required(VERSION 3.14)
+project(VoltScript VERSION 6.5.0 LANGUAGES CXX)
 
-# C++20 Standard
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Compiler flags
-if(MSVC)
-    add_compile_options(/W4 /O2 /EHsc)
-    add_compile_options(/wd4251 /wd4275)
-else()
-    add_compile_options(-Wall -Wextra -Wpedantic -O2)
+# Build type
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
 endif()
 
-# Output directories
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+# Options
+option(BUILD_TESTS "Build tests" ON)
+
+# Include directories
+include_directories(${CMAKE_SOURCE_DIR}/src)
 
 # Source files
-set(VOLT_SOURCES
+set(SOURCES
+    src/main.cpp
     src/token.cpp
     src/lexer.cpp
     src/ast.cpp
@@ -28,65 +27,89 @@ set(VOLT_SOURCES
     src/environment.cpp
     src/callable.cpp
     src/interpreter.cpp
+    src/array.cpp
 )
 
 # Main executable
-add_executable(volt
-    src/main.cpp
-    ${VOLT_SOURCES}
+add_executable(volt ${SOURCES})
+
+# Set output directory
+set_target_properties(volt PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
 )
 
-# ==============================================================================
-# TESTING
-# ==============================================================================
-option(VOLT_BUILD_TESTS "Build tests" ON)
+# ========================================
+# TESTS
+# ========================================
 
-if(VOLT_BUILD_TESTS)
-    message(STATUS "Fetching Google Test...")
-    
+if(BUILD_TESTS)
+    # Fetch GoogleTest
     include(FetchContent)
-    
+    message(STATUS "Fetching Google Test...")
     FetchContent_Declare(
         googletest
         GIT_REPOSITORY https://github.com/google/googletest.git
         GIT_TAG v1.14.0
-        GIT_SHALLOW TRUE
     )
     
+    # For Windows: Prevent overriding the parent project's compiler/linker settings
     set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-    set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
-    
     FetchContent_MakeAvailable(googletest)
     
     enable_testing()
     
-    # Create test executable
-    add_executable(volt_tests
+    # Test sources
+    set(TEST_SOURCES
+        src/token.cpp
+        src/lexer.cpp
+        src/ast.cpp
+        src/parser.cpp
+        src/value.cpp
+        src/environment.cpp
+        src/callable.cpp
+        src/interpreter.cpp
+        src/array.cpp
         tests/test_lexer.cpp
         tests/test_parser.cpp
         tests/test_evaluator.cpp
         tests/test_interpreter.cpp
         tests/test_functions.cpp
-        ${VOLT_SOURCES}
+        tests/test_enhanced_features.cpp
+        tests/test_arrays.cpp
     )
     
-    target_link_libraries(volt_tests GTest::gtest_main)
+    # Test executable
+    add_executable(volt_tests ${TEST_SOURCES})
     
-    # Add test manually (instead of gtest_discover_tests)
-    add_test(NAME AllTests COMMAND volt_tests)
+    # Link GoogleTest
+    target_link_libraries(volt_tests 
+        GTest::gtest_main
+        GTest::gmock_main
+    )
     
-    message(STATUS "✅ Tests enabled")
-else()
-    message(STATUS "⚠️  Tests disabled")
+    # Set output directory for tests
+    set_target_properties(volt_tests PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+    )
+    
+    # Register tests with CTest
+    include(GoogleTest)
+    gtest_discover_tests(volt_tests)
+    
+    message(STATUS "✅ Tests enabled (261 tests)")
 endif()
+
+# ========================================
+# SUMMARY
+# ========================================
 
 message(STATUS "")
 message(STATUS "========================================")
-message(STATUS "VoltScript Milestone 6 - Functions")
+message(STATUS "⚡ VoltScript v${PROJECT_VERSION}")
 message(STATUS "========================================")
-message(STATUS "Version:        ${PROJECT_VERSION}")
+message(STATUS "Milestone:      Arrays & Enhanced Features")
 message(STATUS "Build type:     ${CMAKE_BUILD_TYPE}")
 message(STATUS "Compiler:       ${CMAKE_CXX_COMPILER_ID}")
 message(STATUS "C++ Standard:   C++${CMAKE_CXX_STANDARD}")
-message(STATUS "Build tests:    ${VOLT_BUILD_TESTS}")
+message(STATUS "Build tests:    ${BUILD_TESTS}")
 message(STATUS "========================================")
